index.html in progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,206 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-1 py-md-2">
+	<div class="container">
+		<a href="#" class="navbar-brand mb-0">
+			<h1 class="h4 mb-0">
+				<span class="text-blue-secondary">Auto</span>Dealer
+			</h1>
+		</a>
+		<button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ms-auto">
+				<li class="nav-item">
+					<a class="nav-link active" href="#">O firmie</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Realizacje</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Nagrody</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					Oferta
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<li><a class="dropdown-item" href="#">Action</a></li>
+						<li><a class="dropdown-item" href="#">Another action</a></li>
+						<li><a class="dropdown-item" href="#">Something else here</a></li>
+					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Kontakt</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<main>
+	
+	<header class="hero hero--image text-white pt-5 pb-7" style="background-image: url('./dist/img/hero-1900w.webp');">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-md-6 text-center text-md-start mb-1 mb-md-0 hero__content">
+					<h2 class="h1 text-white">
+						Samochody z Polskiej sieci dealerskiej
+					</h2>
+					<p>
+						W swojej ofercie posiada samochody pochodzące z polskiej sieci dealerskiej oraz luksusowe samochody od niemieckich dealerów.
+					</p>
+					<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+						<a href="#" class="btn btn-blue-secondary text-white">
+							Oferta
+						</a>
+						<a href="#" class="btn btn-white">
+							Kontakt
+						</a>
+					</div>
+				</div>
+				<figure class="col-md-6 hero__content">
+					<img src="./dist/img/hero-image-1900w.webp" alt="happy customers" class="img-fluid">
+				</figure>
+			</div>
+		</div>
+	</header>
+
+	<section class="hero-features">
+		<div class="container">
+			<ul class="row list-unstyled">
+				<li class="col-12 col-md-4 p-2 bg-blue-1 d-flex gap-2 align-items-center z-index-2">
+					<span class="h1 mb-0 text-white">21</span>
+					<h3 class="text-white fw-normal">
+						lat doświadczenia w branży
+					</h3>
+				</li>
+				<li class="col-12 col-md-4 p-2 bg-blue-2 d-flex gap-2 align-items-center z-index-2">
+					<span class="h1 mb-0 text-white">+480</span>
+					<h3 class="text-white fw-normal">
+						zadowolonych klientów
+					</h3>
+				</li>
+				<li class="col-12 col-md-4 p-2 bg-blue-3 d-flex gap-2 align-items-center z-index-2">
+					<span class="h1 mb-0 text-white">24</span>
+					<h3 class="text-white fw-normal">
+						nawet do 24 miesięcy dodatkowej gwarancji
+					</h3>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+<section class="py-4">
+		<div class="container">
+			<header class="row pb-4">
+				<div class="col-md-8 mx-auto text-center">
+					<h2 class="mb-0">
+						Co wyróżnia moje strony?
+					</h2>
+				</div>
+			</header>
+			<ul class="row justify-content-center list-unstyled features">
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Udokumentowane przebiegi
+						</h3>
+						<p>
+							Firma AUTO-HANDEL oferuje kompleksową obsługę finansowania zakupionych pojazdów w firmie jak i z własnego źródła zarówno w kredycie jak i leasingu.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Pierwszy właściciel
+						</h3>
+						<p>
+							Większoś oferowanyc aut posiadała jednego właściiela od nowości, dzięki czemu auta są zadbane, a ich historia serwisowa jest doskonale udokumentowana.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Jasne pochodzenie
+						</h3>
+						<p>
+							Auta pochodzą od polskich autoryzowanych delearów oraz sprawdzonych niemieckich salonów. Każdy samochód musi spełniać restrykcyjne wymogi aby znalazł się w naszej ofercie.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Książka serwisowa
+						</h3>
+						<p>
+							Jasna i przejżyszta historia sprzedawanych przez nas aut to podstawa, dlatego dbamy, aby każfy samochód bez wyjątku posiadał oryginalną ksiązkę serwisową.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Dodatkowa gwarancja
+						</h3>
+						<p>
+							Wychodząć na przeciw oczekiwaniom klientów oferujemy możliwośc dokupienia dodatkowe gwarancji na okres od 1 do 24 miesięcy. Szczególowe informacje w zakładce <a href="page.html">gwarancja</a>.
+						</p>
+					</article>
+				</li>
+				<li class="col-md-6 col-xl-4">
+					<article>
+						<h3>
+							Sprawdzone modele
+						</h3>
+						<p>
+							Samochody są sprawdzane pod kątem ewentualnych uszkodzeń, wad tak aby odpowiadały naszym standardom jakości - sprzedajemy tylko sprawdzone auta!
+						</p>
+					</article>
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<section class="mt-md-10 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
+		<div class="container">
+			<div class="row position-relative">
+				<div class="d-none d-md-block col-12 col-md-6 z-index-2 position-absolute bottom-0">
+					<img src="./dist/img/hand-with-keys-1900w.webp" alt="hand with keys" class="img-fluid banner__image">
+				</div>
+				<div class="col-12 col-md-6 ms-auto py-4 z-index-2">
+					<h2 class="text-white">
+						Już dzisiaj znajdź dla siebie wymażone auto!
+					</h2>
+					<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+						<a href="#" class="btn btn-white">
+							Zobacz naszą ofertę
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+</main>
+
+<footer class="py-2 bg-gray text-white">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<p class="">
+					Copyright &copy; 2022. Created by Grzegorz Pokorski.
+				</p>
+			</div>
+		</div>
+	</div>
+</footer>
+
 	<script src="./dist/js/bundle.js"></script>
 
 </body>
