added telepfone to navbar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 					<a class="nav-link" href="#">Kontakt</a>
 				</li>
 			</ul>
+			<a href="tel:512356012" class="btn btn-blue-primary text-white px-1 ms-auto">
+				+48 512 356 012
+			</a>
 		</div>
 	</div>
 </nav>
