--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ms-auto">
 				<li class="nav-item">
-					<a class="nav-link active" href="#">O firmie</a>
+					<a class="nav-link active" href="#">O nas</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Realizacje</a>
+					<a class="nav-link" href="#">Finansowanie</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Nagrody</a>
+					<a class="nav-link" href="#">Gwarancja</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,6 +38,9 @@
 						<li><a class="dropdown-item" href="#">Another action</a></li>
 						<li><a class="dropdown-item" href="#">Something else here</a></li>
 					</ul>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Sprzedaliśmy</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Kontakt</a>
