added paga.html and single.html (in progress)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<a class="nav-link" href="#">Kontakt</a>
 				</li>
 			</ul>
-			<a href="tel:512356012" class="btn btn-blue-primary text-white px-1 ms-auto">
+			<a href="tel:512356012" class="btn btn-outline-blue-primary px-1 ms-auto">
 				+48 512 356 012
 			</a>
 		</div>
@@ -74,29 +74,29 @@
 						</a>
 					</div>
 				</div>
-				<figure class="col-md-6 hero__content">
+				<figure class="col-md-6 mt-2 mt-md-0 hero__content">
 					<img src="./dist/img/hero-image-1900w.webp" alt="happy customers" class="img-fluid">
 				</figure>
 			</div>
 		</div>
 	</header>
 
-	<section class="hero-features">
+	<section class="text-center text-md-start hero-features">
 		<div class="container">
 			<ul class="row list-unstyled">
-				<li class="col-12 col-md-4 p-2 bg-blue-1 d-flex gap-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-1 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">21</span>
 					<h3 class="text-white fw-normal">
 						lat doświadczenia w branży
 					</h3>
 				</li>
-				<li class="col-12 col-md-4 p-2 bg-blue-2 d-flex gap-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-2 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">+480</span>
 					<h3 class="text-white fw-normal">
 						zadowolonych klientów
 					</h3>
 				</li>
-				<li class="col-12 col-md-4 p-2 bg-blue-3 d-flex gap-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-3 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">24</span>
 					<h3 class="text-white fw-normal">
 						nawet do 24 miesięcy dodatkowej gwarancji
@@ -106,12 +106,12 @@
 		</div>
 	</section>
 
-<section class="py-4">
+	<section class="py-4">
 		<div class="container">
 			<header class="row pb-4">
 				<div class="col-md-8 mx-auto text-center">
 					<h2 class="mb-0">
-						Co wyróżnia moje strony?
+						Dlaczego warto nam zaufać?
 					</h2>
 				</div>
 			</header>
@@ -180,13 +180,13 @@
 		</div>
 	</section>
 
-	<section class="mt-md-10 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
+	<section class="mt-md-7 banner banner--image text-center text-md-start" style="background-image: url('./dist/img/hero-1900w.webp');">
 		<div class="container">
 			<div class="row position-relative">
-				<div class="d-none d-md-block col-12 col-md-6 z-index-2 position-absolute bottom-0">
-					<img src="./dist/img/hand-with-keys-1900w.webp" alt="hand with keys" class="img-fluid banner__image">
+				<div class="d-none d-md-block col-12 col-md-4 z-index-2 banner__image-wrapper">
+					<img src="./dist/img/hand-with-keys-1900w.webp" alt="hand with keys" class="banner__image">
 				</div>
-				<div class="col-12 col-md-6 ms-auto py-4 z-index-2">
+				<div class="col-12 col-md-8 ms-auto py-4 z-index-2">
 					<h2 class="text-white">
 						Już dzisiaj znajdź dla siebie wymażone auto!
 					</h2>
