changes in single.html

--- a/single.html
+++ b/single.html
@@ -11,9 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-1 py-md-2">
 	<div class="container">
 		<a href="#" class="navbar-brand h4 mb-0">
-			<!-- <h1 class=" mb-0"> -->
 			<span class="text-blue-secondary">Auto</span>Dealer
-			<!-- </h1> -->
 		</a>
 		<button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -54,10 +52,59 @@
 </nav>
 
 <main>
+<!-- 	<section class="gallery">
+		<div class="container-fluid">
+			<div class="d-none d-block d-md-flex justify-content-between gallery__controls">
+				<button class="testimonials-slider__nav-item">
+					<span class="fa fa-chevron-left"></span>
+				</button>
+				<button class="testimonials-slider__nav-item">
+					<span class="fa fa-chevron-right"></span>
+				</button>
+			</div>
+			<ul class="row list-unstyled gallery__content">
+				<li class="col-12 col-md-4">
+					<a href=""></a>
+				</li>
+			</ul>
+		</div>
+	</section> -->
 	
 	<article class="py-3 bg-white-dark single">
 		<div class="container">
-			<div class="row">
+			<div class="row d-flex flex-row-reverse">
+
+				<aside class="col-12 col-md-5">
+					<div class="single__content shadow bg-blue-secondary text-white position-sticky single__price-box">
+						<table class="table text-white">
+							<tr>
+								<td>
+									<p>Cena brutto:</p>
+								</td>
+								<td>
+									<p class="fw-bold text-end">229 000 zł</p>
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<p>Cena netto:</h3>
+								</td>
+								<td>
+									<p class="fw-bold text-end">184 900 zł</p>
+								</td>
+							</tr>
+						</table>
+						<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+							<span class="btn btn-white">
+								Faktura VAT
+							</span>
+							<a href="tel:512356012" class="btn btn-white">
+								<span class="fw-bold">Zadzwoń: </span>+48 512 356 102
+							</a>
+						</div>
+					</div>
+				</aside>
+
 				<div class="col-12 col-md-7 single__column">
 					<div class="shadow single__content">
 						<h1 class="h3">
@@ -139,36 +186,7 @@
 						</ul>
 					</div>
 				</div>
-				<aside class="col-12 col-md-5">
-					<div class="single__content shadow bg-blue-secondary text-white position-sticky single__price-box">
-						<table class="table text-white">
-							<tr>
-								<td>
-									<p>Cena brutto:</p>
-								</td>
-								<td>
-									<p class="fw-bold text-end">229 000 zł</p>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<p>Cena netto:</h3>
-								</td>
-								<td>
-									<p class="fw-bold text-end">184 900 zł</p>
-								</td>
-							</tr>
-						</table>
-						<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-							<span class="btn btn-white">
-								Faktura VAT
-							</span>
-							<a href="tel:512356012" class="btn btn-white">
-								<span class="fw-bold">Zadzwoń: </span>+48 512 356 102
-							</a>
-						</div>
-					</div>
-				</aside>
+				
 			</div>
 		</div>
 	</article>
