working with gallery

--- a/single.html
+++ b/single.html
@@ -52,25 +52,62 @@
 </nav>
 
 <main>
-<!-- 	<section class="gallery">
-		<div class="container-fluid">
+	<section class="gallery py-2">
+		<div class="container position-relative">
 			<div class="d-none d-block d-md-flex justify-content-between gallery__controls">
-				<button class="testimonials-slider__nav-item">
+				<button class="gallery__nav-item">
 					<span class="fa fa-chevron-left"></span>
 				</button>
-				<button class="testimonials-slider__nav-item">
+				<button class="gallery__nav-item">
 					<span class="fa fa-chevron-right"></span>
 				</button>
 			</div>
 			<ul class="row list-unstyled gallery__content">
-				<li class="col-12 col-md-4">
-					<a href=""></a>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/1-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/2-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/3-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/4-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/5-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/6-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/7-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
+				</li>
+				<li class="col-12 col-md-5">
+					<a href="#" class="gallery__thumbnail-wrapper">
+						<img src="./dist/img/8-1900w.webp" alt="" class="gallery__thumbnail">
+					</a>
 				</li>
 			</ul>
 		</div>
-	</section> -->
+	</section>
 	
-	<article class="py-3 bg-white-dark single">
+	<article class="pb-3 bg-white-dark single">
 		<div class="container">
 			<div class="row d-flex flex-row-reverse">
 
