small changes in gallery thumbnail style

--- a/single.html
+++ b/single.html
@@ -52,7 +52,7 @@
 </nav>
 
 <main>
-	<section class="gallery py-2">
+	<section class="gallery py-1 py-md-2">
 		<div class="container position-relative">
 			<div class="d-none d-block d-md-flex justify-content-between gallery__controls">
 				<button class="gallery__nav-item">
