struggling with gallery

--- a/single.html
+++ b/single.html
@@ -52,9 +52,9 @@
 </nav>
 
 <main>
-	<section class="gallery py-1 py-md-2">
+	<section class="gallery py-1">
 		<div class="container position-relative">
-			<div class="d-none d-block d-md-flex justify-content-between gallery__controls">
+			<div class="d-flex justify-content-between gallery__controls">
 				<button class="gallery__nav-item">
 					<span class="fa fa-chevron-left"></span>
 				</button>
@@ -62,43 +62,43 @@
 					<span class="fa fa-chevron-right"></span>
 				</button>
 			</div>
-			<ul class="row list-unstyled gallery__content">
-				<li class="col-12 col-md-5">
+			<ul class="row g-0 g-md-1 list-unstyled gallery__content">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/1-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/2-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/3-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/4-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/5-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/6-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/7-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
-				<li class="col-12 col-md-5">
+				<li class="col-12 col-md-5 mt-0">
 					<a href="#" class="gallery__thumbnail-wrapper">
 						<img src="./dist/img/8-1900w.webp" alt="" class="gallery__thumbnail">
 					</a>
