single short phone number test

--- a/single.html
+++ b/single.html
@@ -136,7 +136,7 @@
 								Faktura VAT
 							</span>
 							<a href="tel:512356012" class="btn btn-white">
-								<span class="fw-bold">Zadzwoń: </span>+48 512 356 102
+								<span class="fw-bold">Zadzwoń: </span>512 356 102
 							</a>
 						</div>
 					</div>
