--- a/list-of-categories.html
+++ b/list-of-categories.html
@@ -58,10 +58,10 @@
 			<div class="row">
 				<div class="col-md-8 mx-auto text-center z-index-2">
 					<h1 class="h2 text-white">
-						Finansowanie
+						Sprzedaliśmy
 					</h1>
 					<p>
-						Firma AutoDealer oferuje kompleksową obsługę finansowania zakupionych pojazdów w firmie jak i z własnego źródła zarówno w kredycie jak i leasingu.
+						Zapraszam do obejrzenia ciekawych samochodów jakie zostały zakupione w firmie AUTO-Handel. Modele wyselekcjonowane wg. marek.
 					</p>
 				</div>
 			</div>
@@ -70,22 +70,56 @@
 
 	<section class="py-4">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-md-8 mx-auto">
-					<p>
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum pariatur, doloribus perspiciatis similique aspernatur commodi, dolorem amet dolorum, vel, esse molestias minus exercitationem sit placeat ea dolores asperiores repellat corrupti!
-					</p>
-					<h3>
-						Wspołpracujemny tylko z najlepszymi.
-					</h3>
-					<p>
-						Pellentesque lorem libero, ultricies nec orci sed, ultrices laoreet orci. Phasellus enim odio, euismod eu cursus sit amet, porta sed metus. Maecenas sit amet tempus elit, vitae pulvinar nisl. Nunc accumsan elementum suscipit. Vivamus urna libero, rhoncus in neque congue, feugiat pretium mi. Vivamus sit amet massa elit. Mauris ultricies dictum ligula at tincidunt. Ut euismod metus mauris, elementum scelerisque turpis gravida at. Aenean tincidunt feugiat justo ac egestas.
-					</p>
-					<p>
-						Ut commodo laoreet dolor, eget vehicula ex euismod eu. Etiam a orci vel nibh pharetra sollicitudin vel a nulla. Quisque id blandit quam. Donec quis maximus augue. Quisque ut elit commodo, consectetur orci ut, rhoncus odio.
-					</p>
-				</div>
-			</div>			
+			<ul class="row justify-content-center list-unstyled features">
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Alfa Romeo
+						<span class="bg-blue-primary text-white py-05 px-1">4</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Mercedes
+						<span class="bg-blue-primary text-white py-05 px-1">32</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Audi
+						<span class="bg-blue-primary text-white py-05 px-1">46</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Renault
+						<span class="bg-blue-primary text-white py-05 px-1">21</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Citroen
+						<span class="bg-blue-primary text-white py-05 px-1">46</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						BMW
+						<span class="bg-blue-primary text-white py-05 px-1">65</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						Volkswagen
+						<span class="bg-blue-primary text-white py-05 px-1">102</span>
+					</a>
+				</li>
+				<li class="col-12 col-md-4">
+					<a href="#" class="d-flex align-items-center justify-content-between text-blue-primary fw-bold p-2 shadow features__cat-link">
+						KIA
+						<span class="bg-blue-primary text-white py-05 px-1">15</span>
+					</a>
+				</li>
+			</ul>
 		</div>
 	</section>
 
@@ -123,7 +157,7 @@
 	</div>
 </footer>
 
-	<script src="./dist/js/bundle.js"></script>
+<script src="./dist/js/bundle.js"></script>
 
 </body>
 </html>
