added working glightbox to slider in single.html

--- a/single.html
+++ b/single.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css">
 	<link rel="stylesheet" href="./dist/css/style.css">
 </head>
 <body>
@@ -64,43 +65,43 @@
 			</div>
 			<ul class="row g-0 g-md-1 list-unstyled gallery__content">
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/1-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/1-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/1-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/2-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/2-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/2-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/3-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/3-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/3-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/4-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/4-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/4-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/5-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/5-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/5-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/6-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/6-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/6-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/7-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/7-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/7-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 				<li class="col-12 col-md-5 mt-0">
-					<a href="#" class="gallery__thumbnail-wrapper">
-						<img src="./dist/img/8-1900w.webp" alt="" class="gallery__thumbnail">
+					<a href="./dist/img/8-1900w.webp" class="gallery__thumbnail-wrapper glightbox">
+						<img src="./dist/img/8-768w.webp" alt="" class="gallery__thumbnail">
 					</a>
 				</li>
 			</ul>
@@ -262,7 +263,9 @@
 	</div>
 </footer>
 
-	<script src="./dist/js/bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<script src="./dist/js/bundle.js"></script>
+
 
 </body>
 </html>
