--- a/single.html
+++ b/single.html
@@ -133,10 +133,10 @@
 							</tr>
 						</table>
 						<div class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-							<span class="btn btn-white">
+							<span class="btn btn-sm btn-white">
 								Faktura VAT
 							</span>
-							<a href="tel:512356012" class="btn btn-white">
+							<a href="tel:512356012" class="btn btn-sm btn-white">
 								<span class="fw-bold">Zadzwoń: </span>512 356 102
 							</a>
 						</div>
