redesign archive price section

--- a/archive.html
+++ b/archive.html
@@ -101,13 +101,13 @@
 									<td>39 000 km</td>
 								</tr>
 							</table>
-							<footer class="d-flex flex-row flex-wrap gap-2">
-								<p class="fw-bold text-blue-primary mb-0">
-									229 000 zł (brutto)
-								</p>
-								<p class="fw-bold mb-0">
-									184 900 zł (netto)
-								</p>
+							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+								<span href="#" class="btn btn-blue-secondary text-white">
+									229 000 zł
+								</span>
+								<a href="#" class="btn btn-outline-blue-primary">
+									Szczegóły
+								</a>
 							</footer>
 						</article>
 					</div>
@@ -145,13 +145,13 @@
 									<td>39 000 km</td>
 								</tr>
 							</table>
-							<footer class="d-flex flex-row flex-wrap gap-2">
-								<p class="fw-bold text-blue-primary mb-0">
-									599 000 zł (brutto)
-								</p>
-								<p class="fw-bold mb-0">
-									485 900 zł (netto)
-								</p>
+							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
+								<span href="#" class="btn btn-blue-secondary text-white">
+									599 000 zł
+								</span>
+								<a href="#" class="btn btn-outline-blue-primary">
+									Szczegóły
+								</a>
 							</footer>
 						</article>
 					</div>
