small html changes in index.html (mainly icons added)

--- a/archive.html
+++ b/archive.html
@@ -102,7 +102,7 @@
 								</tr>
 							</table>
 							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-								<span href="#" class="btn btn-blue-secondary text-white">
+								<span class="btn btn-blue-secondary text-white pe-none">
 									229 000 zł
 								</span>
 								<a href="#" class="btn btn-outline-blue-primary">
@@ -146,7 +146,7 @@
 								</tr>
 							</table>
 							<footer class="d-flex flex-row flex-wrap gap-05 justify-content-center justify-content-md-start">
-								<span href="#" class="btn btn-blue-secondary text-white">
+								<span class="btn btn-blue-secondary text-white pe-none">
 									599 000 zł
 								</span>
 								<a href="#" class="btn btn-outline-blue-primary">
