--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
 	<section class="text-center text-md-start hero-features">
 		<div class="container">
 			<ul class="row list-unstyled">
-				<li class="col-12 col-lg-4 p-2 bg-blue-1 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-1 d-flex flex-column flex-lg-row gap-lg-1 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">21</span>
 					<h3 class="text-white fw-normal">
 						lat doświadczenia w branży
 					</h3>
 				</li>
-				<li class="col-12 col-lg-4 p-2 bg-blue-2 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-2 d-flex flex-column flex-lg-row gap-lg-1 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">+480</span>
 					<h3 class="text-white fw-normal">
 						zadowolonych klientów
 					</h3>
 				</li>
-				<li class="col-12 col-lg-4 p-2 bg-blue-3 d-flex flex-column flex-lg-row gap-lg-2 align-items-center z-index-2">
+				<li class="col-12 col-lg-4 p-2 bg-blue-3 d-flex flex-column flex-lg-row gap-lg-1 align-items-center z-index-2">
 					<span class="h1 mb-0 text-white">24</span>
 					<h3 class="text-white fw-normal">
 						nawet do 24 miesięcy dodatkowej gwarancji
@@ -119,6 +119,7 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
+							<span class="fa fa-tachometer-alt me-1 text-blue-secondary" aria-hiden="true"></span>
 							Udokumentowane przebiegi
 						</h3>
 						<p>
@@ -129,7 +130,8 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
-							Pierwszy właściciel
+							<span class="fa fa-user me-1 text-blue-secondary" aria-hiden="true"></span>
+							Pierwszy właściciel lorem
 						</h3>
 						<p>
 							Większoś oferowanyc aut posiadała jednego właściiela od nowości, dzięki czemu auta są zadbane, a ich historia serwisowa jest doskonale udokumentowana.
@@ -139,6 +141,7 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
+							<span class="fa fa-flag me-1 text-blue-secondary" aria-hiden="true"></span>
 							Jasne pochodzenie
 						</h3>
 						<p>
@@ -149,6 +152,7 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
+							<span class="fa fa-wrench me-1 text-blue-secondary" aria-hiden="true"></span>
 							Książka serwisowa
 						</h3>
 						<p>
@@ -159,6 +163,7 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
+							<span class="fa fa-shield-alt me-1 text-blue-secondary" aria-hiden="true"></span>
 							Dodatkowa gwarancja
 						</h3>
 						<p>
@@ -169,6 +174,7 @@
 				<li class="col-md-6 col-xl-4">
 					<article>
 						<h3>
+							<span class="fa fa-car me-1 text-blue-secondary" aria-hiden="true"></span>
 							Sprawdzone modele
 						</h3>
 						<p>
