center text in recomended section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 								<div class="p-2">
 									<header>
 										<a href="#">
-											<h3>
+											<h3 class="text-center text-md-start">
 												Ferrari CALIFORNIA 2+2 4.3 V8 490KM BEZWYPADKOWA NIEMALOWANA SERWIS ASO
 											</h3>
 										</a>
@@ -252,7 +252,7 @@
 								<div class="p-2">
 									<header>
 										<a href="#">
-											<h3>
+											<h3 class="text-center text-md-start">
 												Mercedes-Benz S500 4Matic V8bi-turbo 456KM AMG serwis ASO
 											</h3>
 										</a>
@@ -278,7 +278,7 @@
 								<div class="p-2">
 									<header>
 										<a href="#">
-											<h3>
+											<h3 class="text-center text-md-start">
 												Ferrari CALIFORNIA 2+2 4.3 V8 490KM BEZWYPADKOWA NIEMALOWANA SERWIS ASO
 											</h3>
 										</a>
