--- a/archive.html
+++ b/archive.html
@@ -69,7 +69,7 @@
 		<div class="container">
 			<ul class="row justify-content-center list-unstyled archive">
 				<li class="col-12">
-					<div class="shadow row flex-row g-0">
+					<div class="shadow row flex-row g-0 bg-white">
 						<a href="#" class="col-12 col-md-5">
 							<figure class="d-block mb-0 archive__image-wrapper">
 								<img src="./dist/img/4-1900w.webp" alt="image" class="archive__image">
@@ -113,7 +113,7 @@
 					</div>
 				</li>
 				<li class="col-12">
-					<div class="shadow row flex-row g-0">
+					<div class="shadow row flex-row g-0 bg-white">
 						<a href="#" class="col-12 col-md-5">
 							<figure class="d-block mb-0 archive__image-wrapper">
 								<img src="./dist/img/ferrari-1900w.webp" alt="image" class="archive__image">
